[package]
name = "getch-rs"
version = "0.1.4"
edition = "2021"
authors = ["kumavale"]
description = "`getch` for Windows and Unix."
license = "MIT"
repository = "https://github.com/kumavale/getch-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "consoleapi",
    "handleapi",
    "processenv",
    "winbase",
    "wincon",
    "winuser",
]
[target.'cfg(windows)'.dependencies]
libc = "0.2"

[target.'cfg(unix)'.dependencies]
nix = "0.26"
